--- a/Directory.build.props
+++ b/Directory.build.props
@@ -2,18 +2,18 @@
   <PropertyGroup>
     <Copyright>Copyright (c) Nivaes Systems</Copyright>
     <PackageLicenseUrl>http://opensource.org/licenses/ms-pl</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/Nivaes/Xamarin.Droid.MaterialDataTimePicker</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/Nivaes/Xamarin.Droid.CircleImageView</PackageProjectUrl>
     <PackageIconUrl>https://i.imgur.com/D3CfFea.png</PackageIconUrl>
     <Authors>Nivaes Systems</Authors>
     <Company>Nivaes Systems</Company>
     <Owners>Nivaes</Owners>
     <PackageReleaseNotes>https://www.nivaes.com</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <RepositoryUrl>https://github.com/Nivaes/Xamarin.Droid.MaterialDataTimePicker</RepositoryUrl>
+    <RepositoryUrl>https://github.com/Nivaes/Xamarin.Droid.CircleImageView</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <Product>$(AssemblyName) ($(TargetFramework))</Product>
     <NeutralLanguage>en</NeutralLanguage>
-    <Version>3.5.2.5</Version>
+    <Version>2.2.0.1</Version>
 
     <LangVersion>latest</LangVersion>
     <NoWarn>$(NoWarn);1591;1701;1702;1705;VSX1000</NoWarn>
