--- a/Directory.build.props
+++ b/Directory.build.props
@@ -2,14 +2,14 @@
   <PropertyGroup>
     <Copyright>Copyright (c) Nivaes Systems</Copyright>
     <PackageLicenseUrl>http://opensource.org/licenses/ms-pl</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/Nivaes/Xamarin.Droid.CircleImageView</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/Nivaes/Xamarin.Droid.Hdodenhof.CircleImageView</PackageProjectUrl>
     <PackageIconUrl>https://i.imgur.com/D3CfFea.png</PackageIconUrl>
     <Authors>Nivaes Systems</Authors>
     <Company>Nivaes Systems</Company>
     <Owners>Nivaes</Owners>
     <PackageReleaseNotes>https://www.nivaes.com</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <RepositoryUrl>https://github.com/Nivaes/Xamarin.Droid.CircleImageView</RepositoryUrl>
+    <RepositoryUrl>https://github.com/Nivaes/Xamarin.Droid.Hdodenhof.CircleImageView</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <Product>$(AssemblyName) ($(TargetFramework))</Product>
     <NeutralLanguage>en</NeutralLanguage>
