--- a/Xamarin.Droid.Hdodenhof.CircleImageView/Xamarin.Droid.Hdodenhof.CircleImageView.csproj
+++ b/Xamarin.Droid.Hdodenhof.CircleImageView/Xamarin.Droid.Hdodenhof.CircleImageView.csproj
@@ -1,6 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="MSBuild.Sdk.Extras">
   <PropertyGroup>
-    <TargetFrameworks>MonoAndroid81</TargetFrameworks>
+    <TargetFrameworks>monoandroid90</TargetFrameworks>
+  </PropertyGroup>
+
+  <PropertyGroup>
     <AssemblyName>De.Hdodenhof.CircleImageView</AssemblyName>
     <RootNamespace>De.Hdodenhof.CircleImageView</RootNamespace>
     <Description>Binding library of de.hdodenhof.circleimageview</Description>
@@ -9,45 +12,22 @@
     <GeneratePackageOnBuild Condition="'$(Configuration)' == 'Release'">true</GeneratePackageOnBuild>
   </PropertyGroup>
 
+  <!--<PropertyGroup Condition="$(TargetFramework.StartsWith('MonoAndroid')) ">-->
+  <PropertyGroup>
+    <IsBindingProject>true</IsBindingProject>
+  </PropertyGroup>
+  
+  <!--<ItemGroup Condition="$(TargetFramework.StartsWith('MonoAndroid'))">-->
   <ItemGroup>
     <None Include="Resources\*.cs" />
     <Compile Remove="Resources\*.cs" />
-  </ItemGroup>
-
-  <PropertyGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid')) ">
-    <IsBindingProject>true</IsBindingProject>
-  </PropertyGroup>
-
-  <PropertyGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid'))">
-    <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
-  </PropertyGroup>
-
-  <ItemGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid'))">
-    <AndroidResource Include="Resources\**\*.xml" SubType="Designer" Generator="MSBuild:UpdateAndroidResources" />
+    <AndroidResource Include="Resources\**\*.xml" Generator="MSBuild:UpdateAndroidResources" />
     <LibraryProjectZip Include="Jars\*.aar" />
-    <TransformFile Include="Transforms\*.xml" SubType="Designer" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="Mono.Android" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Xamarin.Android.Support.Annotations" Version="27.0.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="MSBuild.Sdk.Extras" Version="1.3.1" />
+    <TransformFile Include="Transforms\*.xml" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Additions\" />
   </ItemGroup>
-
-  <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
 
 </Project>
