Update to Circleimageview 3.0.1

--- a/Xamarin.Droid.Hdodenhof.CircleImageView/Xamarin.Droid.Hdodenhof.CircleImageView.csproj
+++ b/Xamarin.Droid.Hdodenhof.CircleImageView/Xamarin.Droid.Hdodenhof.CircleImageView.csproj
@@ -8,7 +8,7 @@
     <RootNamespace>De.Hdodenhof.CircleImageView</RootNamespace>
     <Description>Binding library of de.hdodenhof.circleimageview</Description>
     <PackageId>Nivaes.Droid.Hdodenhof.CircleImageView</PackageId>
-    <PackageTags>xamarin;android;monodroid;circleimageview</PackageTags>
+    <PackageTags>xamarin;android;monodroid;circleimageview;droid;hdodenhof</PackageTags>
     <GeneratePackageOnBuild Condition="'$(Configuration)' == 'Release'">true</GeneratePackageOnBuild>
   </PropertyGroup>
 
