--- a/Xamarin.Droid.Hdodenhof.CircleImageView.Sample/Xamarin.Droid.Hdodenhof.CircleImageView.Sample.csproj
+++ b/Xamarin.Droid.Hdodenhof.CircleImageView.Sample/Xamarin.Droid.Hdodenhof.CircleImageView.Sample.csproj
@@ -32,6 +32,8 @@
     <AndroidUseSharedRuntime>True</AndroidUseSharedRuntime>
     <AndroidLinkMode>None</AndroidLinkMode>
     <EmbedAssembliesIntoApk>False</EmbedAssembliesIntoApk>
+    <MandroidI18n />
+    <AndroidSupportedAbis />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
