--- a/Xamarin.Droid.Hdodenhof.CircleImageView.Sample/Xamarin.Droid.Hdodenhof.CircleImageView.Sample.csproj
+++ b/Xamarin.Droid.Hdodenhof.CircleImageView.Sample/Xamarin.Droid.Hdodenhof.CircleImageView.Sample.csproj
@@ -50,7 +50,8 @@
     <AotAssemblies>false</AotAssemblies>
     <EnableLLVM>false</EnableLLVM>
     <BundleAssemblies>false</BundleAssemblies>
-    <AndroidSupportedAbis>armeabi-v7a;x86_64;arm64-v8a</AndroidSupportedAbis>
+    <AndroidSupportedAbis>armeabi-v7a;x86;x86_64;arm64-v8a</AndroidSupportedAbis>
+    <MandroidI18n />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
