--- a/Xamarin.Droid.Hdodenhof.CircleImageView/Xamarin.Droid.Hdodenhof.CircleImageView.csproj
+++ b/Xamarin.Droid.Hdodenhof.CircleImageView/Xamarin.Droid.Hdodenhof.CircleImageView.csproj
@@ -1,6 +1,9 @@
-﻿<Project Sdk="MSBuild.Sdk.Extras">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+  
   <PropertyGroup>
-    <TargetFramework>monoandroid90</TargetFramework>
+    <OutputType>Library</OutputType>
+    <TargetFrameworks>net7.0-android;net8.0-android</TargetFrameworks>
+
   </PropertyGroup>
 
   <PropertyGroup>
