--- a/Xamarin.Droid.Hdodenhof.CircleImageView/Xamarin.Droid.Hdodenhof.CircleImageView.csproj
+++ b/Xamarin.Droid.Hdodenhof.CircleImageView/Xamarin.Droid.Hdodenhof.CircleImageView.csproj
@@ -3,7 +3,6 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFrameworks>net7.0-android;net8.0-android</TargetFrameworks>
-
   </PropertyGroup>
 
   <PropertyGroup>
@@ -15,7 +14,7 @@
     <GeneratePackageOnBuild Condition="'$(Configuration)' == 'Release'">true</GeneratePackageOnBuild>
   </PropertyGroup>
 
-  <PropertyGroup>
+  <!--<PropertyGroup>
     <IsBindingProject>true</IsBindingProject>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
@@ -28,6 +27,6 @@
     <AndroidResource Include="Resources\**\*.xml" Generator="MSBuild:UpdateAndroidResources" />
     <LibraryProjectZip Include="Jars\*.aar" />
     <TransformFile Include="Transforms\*.xml" />
-  </ItemGroup>
+  </ItemGroup>-->
 
 </Project>
